# rica

./: .gitignore  CITATION.cff  README.md  claude-progress.txt  features.json  gulpfile.js  io_utils.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  rica.py
.github/workflows/: build.yml  docs.yml  update-citation.yml
docs/: classification-workflow.md  getting-started.md  ica-tab-guide.md  index.md  interface-overview.md  qc-tab-guide.md  troubleshooting.md  updating-rica.md
plotting/: dynamic_plots.py
scripts/: build.sh  lint.sh  rica_server.py
src/: Mobile.js  UploadFolder.js  index.js
src/Diagnostics/: Diagnostics.js  NiivueMosaic.js
src/Info/: Info.js
src/Plots/: BrainViewer.js  ComponentTable.js  CorrelationHeatmap.js  FFTSpectrum.js  NiftiLoader.js  Plots.js  ScatterPlot.js  TimeSeries.js  ToggleSwitch.js
src/PopUps/: AboutPopUp.js  ChangelogPopUp.js  CitationPopUp.js  IntroPopUp.js  ManualClassificationWarningPopUp.js
src/Tree/: DecisionTree.js  DecisionTreeTab.js
src/constants/: logo.js  version.js
src/styles/: output.css
src/utils/: analytics.js  decisionTreeUtils.js  fftUtils.js  niftiUtils.js  pathUtils.js
