[project]
name = "rica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "nibabel>=5.3.2",
    "nilearn>=0.12.1",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "st-aggrid",
    "streamlit>=1.50.0",
    "streamlit-bokeh>=3.8.0",
]
